--- a/css/styles.css
+++ b/css/styles.css
@@ -10,14 +10,30 @@ h1{
     text-align: center;
 }
 
+main{
+    margin-top: 0;
+}
+
+.welcome{
+    background-color: #d1dbfc;
+}
+
+.personal{
+    background-color: #eaefff;
+}
+
+.professional{
+    background-color: #d1dbfc;
+}
+
 header{
-    margin-bottom: 144px;
+    margin-bottom: 0;
     background-color: #E6E6E6;
     background-image: url('../img/cover.jpg');
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
-    height: 300px;
+    height: 200px;
 }
 
 .fechas{
@@ -44,7 +60,9 @@ header{
     color: white;
 }
 
-.subtitulo{
+.subtitulo{  
+    text-align: center;
+    justify-content: center;
     background-color: #C4C4C4;
     color: #005677;
     font-size: 20px;
@@ -64,7 +82,24 @@ footer{
 }
 
 nav{
+    margin-top: 0;
     background-color: #005677;
     color: #E6E6E6;
+    text-decoration: none;
+    padding: 1px;
+}
+
+nav ul{
+    list-style: none;
+    list-style-type: none;
+}
+
+nav li{
+    display: inline-block;
+    margin-right: 10px;
+}
+
+nav a{
+    color: white;
     text-decoration: none;
 }
