--- a/css/styles.css
+++ b/css/styles.css
@@ -14,6 +14,11 @@ main{
     margin-top: 0;
 }
 
+section{
+    margin-left: 7vb;
+    margin-right: 7vb;
+}
+
 .welcome{
     background-color: #d1dbfc;
 }
@@ -33,11 +38,28 @@ header{
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
-    height: 200px;
+    height: 300px;
+}
+
+#personal ul{
+    list-style-type: none;
+
+}
+
+.about-me{
+    background-color: #0d1b47;
+    padding: 8px;
+    border-radius: 10px;
+}
+
+.info{
+    font-weight: bold;
 }
 
 .fechas{
-    font-weight: bold;
+    font-weight: lighter;
+    color: gray;
+    font-size: small;
 }
 
 .logo{
@@ -49,6 +71,31 @@ header{
     height: 150px;
     width: 150px;
 }
+
+.tags{
+    list-style: none;
+    text-align: left;
+}
+
+.tags li{
+    display: inline-block;
+    margin-left: 15px;
+    background-color:rgb(73, 137, 255);
+    color: white;
+    margin-top: 0px;
+    margin-bottom: 5px;
+    padding: 2px 6px 2px 6px;
+    border-radius: 4px;
+}
+
+/*
+.tags li:hover{
+    background-color:rgb(40, 89, 179);
+    color: white;
+    cursor: pointer;
+
+}
+*/
 
 .titulo{
     font-family: 'Times New Roman';
@@ -63,15 +110,17 @@ header{
 .subtitulo{  
     text-align: center;
     justify-content: center;
-    background-color: #C4C4C4;
+    background-color: #e3e8ff;
     color: #005677;
     font-size: 20px;
     line-height: 84.69%;
+    padding: 20px;
+    border-radius: 8px;
 }
 
 footer{
     text-align: center;
-    background-color: #005677;
+    background-color: #215CBB;
     color: white; 
     font-family: 'Times New Roman';
     font-style: normal;
@@ -79,14 +128,18 @@ footer{
     font-size: 20px;
     line-height: 84.69%;
     margin-bottom: 0;
+    bottom: 0;
+    width: 100%;
+    height: 2.5rem;
 }
 
 nav{
     margin-top: 0;
-    background-color: #005677;
+    background-color: #215CBB;
     color: #E6E6E6;
     text-decoration: none;
     padding: 1px;
+    font-weight: 700;
 }
 
 nav ul{
