--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,10 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
 
+
+*{
+    box-sizing: border-box;
+}
 body{
     margin: 0;
     font-family: 'Roboto';
@@ -108,6 +112,7 @@ header{
 }
 
 .subtitulo{  
+    width: 600px;
     text-align: center;
     justify-content: center;
     background-color: #e3e8ff;
@@ -116,6 +121,7 @@ header{
     line-height: 84.69%;
     padding: 20px;
     border-radius: 8px;
+    
 }
 
 footer{
