--- a/css/styles.css
+++ b/css/styles.css
@@ -23,6 +23,10 @@ section{
     margin-right: 7vb;
 }
 
+.container{
+    margin: 0 30%;
+}
+
 .welcome{
     background-color: #d1dbfc;
 }
@@ -64,6 +68,10 @@ header{
     font-weight: lighter;
     color: gray;
     font-size: small;
+}
+
+.header-content{
+    padding-top: 5%;
 }
 
 .logo{
@@ -124,9 +132,14 @@ header{
     
 }
 
+.skill-icon{
+    width: 50px;
+    height: 50px;
+}
+
 footer{
     text-align: center;
-    background-color: #215CBB;
+    background-color: #03012b;
     color: white; 
     font-family: 'Times New Roman';
     font-style: normal;
@@ -136,16 +149,19 @@ footer{
     margin-bottom: 0;
     bottom: 0;
     width: 100%;
-    height: 2.5rem;
+    height: 100px;
+    padding-top: 20px;
 }
 
 nav{
     margin-top: 0;
-    background-color: #215CBB;
+    background-color: #03012b;
     color: #E6E6E6;
     text-decoration: none;
     padding: 1px;
     font-weight: 700;
+    justify-content: center;
+    text-align: center;
 }
 
 nav ul{
